styles.css
:root {
  /* Light theme */
  --primary-bg-color: #f5f5f5;
  --primary-text-color: #333;
  --link-color: #1678c2;
  --hr-color: #ccc;
}

[data-theme="dark"] {
  /* Dark theme */
  --primary-bg-color: #333;
  --primary-text-color: #f5f5f5;
  --link-color: #f97618;
  --hr-color: #f5f5f5;
}

body {
  font-family: "Palanquin", monospace;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  margin: 0;
  background-color: var(--primary-bg-color);
  color: var(--primary-text-color);
}
.container {
  width: 50%;
  max-width: 80%; /* 2/3 of the viewport width */
  padding: 0; /* no padding on the sides */
  margin: 2em auto;
  text-align: left; /* Left-justify the text */
}
a {
  color: var(--link-color);
}
nav a {
  margin-right: 1em;
}
nav a:last-child {
  margin-right: 0;
}
hr {
  border: 1px solid var(--hr-color);
  width: 100%; /* make the line fill up the full width */
}
.name {
  font-size: 1.5rem;
}
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}
.centered-content {
  display: flex;
  flex-direction: column;
  justify-content: start;
  height: 100%;
}
h1,
h2,
p,
ul {
  margin-top: 0.5em; /* adds some vertical space between text elements */
  margin-bottom: 0.1em; /* adds some vertical space between text elements */
}
/* Media queries for responsiveness */
@media (max-width: 800px) {
  .container {
    width: 100%;
  }
  nav a {
    margin-right: 0.5em;
  }
}
button {
  background-color: var(--primary-bg-color);
  color: var(--primary-text-color);
  border: 2px solid var(--link-color);
  padding: 2px;
  font-size: 1rem;
  width: 2em;
  height: 2em;
  border-radius: 5px;
  transition: background-color 0.3s, color 0.3s;
  cursor: pointer;
  outline: none;
}

button:hover {
  background-color: var(--link-color);
  color: var(--primary-bg-color);
}

